Squashed commit of the following:
commit 2bce8ae1ab4e8e28925aa10ecd01532c42ba6ad7
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Thu May 14 00:24:36 2026 +0700

    Delete AuctionSystem_final.zip

commit 2ccb2de00ffc72192a3e7a1501ddf994e32c9654
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Tue May 12 22:42:48 2026 +0700

    fix

commit 081777f4f8d3b452e554795a67210d89e2ba5531
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Mon May 11 20:51:13 2026 +0700

    fix

commit b48e49c6fd4fbca0f843ca3fbaf322ac76d883f1
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Mon May 11 20:46:25 2026 +0700

    Update RegisterController.java

commit 5520f49486a015de038781fd909ef071a2613a2e
Merge: 3c7691f adc204d
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Mon May 11 00:40:36 2026 +0700

    Merge remote-tracking branch 'origin/dev_Ly' into dev_Thuy

commit 3c7691f4903e2cf535684e9231caa959ff3c0c09
Merge: 639f5ae a4dab87
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Sun May 10 23:19:30 2026 +0700

    Merge remote-tracking branch 'origin/dev_Ly' into dev_Thuy

commit adc204d6c3a5603235aed5d05454f3e48254e531
Author: thihuyenlybui080-spec <thihuyenlybui080@gmail.com>
Date:   Sun May 10 23:02:05 2026 +0700

    Change: change SellerDashboardController

commit 639f5ae84bd1e8a071d982b77de4149fedec8dda
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Sun May 10 21:40:48 2026 +0700

    fix

commit 0a6f250132607a189fca126672cbebab864a3890
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Sun May 10 20:23:59 2026 +0700

    commit

commit 601ac2065c4b18e7b35072a5f644196afc0cfc98
Author: thuthuy25022024 <25022024@vnu.edu.vn>
Date:   Sun May 10 20:18:47 2026 +0700

    Remove target directory

commit a4dab87043a74e80519e90c8f71989ab3efd7d20
Author: thihuyenlybui080-spec <thihuyenlybui080@gmail.com>
Date:   Sun May 10 16:03:49 2026 +0700

    add controller

commit 75f1cfea26cb992c834cbab73463a601327e45cb
Merge: 868a803 4d035a6
Author: thuthuy